modify some parts from 43 to 54

--- a/Quesitonwhy1.html
+++ b/Quesitonwhy1.html
@@ -150,7 +150,7 @@
         "4/10": "どうして英語を勉強してるの？",
         "5/10": "どうしてそれがそんなに好きなの？",
         "6/10": "彼女はどうしてそんなに遅くまで働いてるの？",
-        "7/10": "どうしてそんなに一生懸命勉強してるの？",
+        "7/10": "どうしてそんなに一生懸命勉強してるの？(現在進行形)",
         "8/10": "なんでこんな夜遅くまで起きてるの？",
         "9/10": "なんで仕事に遅れたの？",
         "10/10": "なんで昨日静かだったの？"
