--- a/Questionwhat1.html
+++ b/Questionwhat1.html
@@ -151,8 +151,8 @@
         "5/10": "お仕事は何をしているの？",
         "6/10": "何をするのが好きなの？",
         "7/10": "彼女は何が好きなの？",
-        "8/10": "何て言ったの？",
-        "9/10": "夜ご飯何食べたの？",
+        "8/10": "(あなたは)何て言ったの？",
+        "9/10": "夜ご飯に何食べたの？",
         "10/10": "彼は何を買ったの？"
     };
 
