--- a/Questionwhat2.html
+++ b/Questionwhat2.html
@@ -147,10 +147,10 @@
         "1/10": "何をするつもりなの？",
         "2/10": "彼に何を言うつもりなの？",
         "3/10": "何をしてたの？",
-        "4/10": "何を話してたの？",
+        "4/10": "何について話してたの？",
         "5/10": "彼女は何について話してたの？",
         "6/10": "それはどんな仕事？",
-        "7/10": "どんな映画を見てるの？",
+        "7/10": "どんな映画を(今)見てるの？",
         "8/10": "どんなスポーツが好きなの？",
         "9/10": "どんな本を買ったの？",
         "10/10": "どんな食べ物を食べるの？"
@@ -160,7 +160,7 @@
         "1/10": "What are you gonna do?",
         "2/10": "What are you gonna say to him?",
         "3/10": "What were you doing?",
-        "4/10": "What were you talking?",
+        "4/10": "What were you talking about??",
         "5/10": "What was she talking about?",
         "6/10": "What kind of job is that?",
         "7/10": "What kind of movie are you watching?",
