--- a/Questionwhen2.html
+++ b/Questionwhen2.html
@@ -165,7 +165,7 @@
         "6/10": "Since when have you been studying Japanese?",
         "7/10": "Since when have you been living in this city?",
         "8/10": "Since when have you been doing yoga?",
-        "9/10": "Since when have you been interested in photography?",
+        "9/10": "Since when have you been interested in photos",
         "10/10": "Since when have you been playing table tennis?"
     };
 
