--- a/Questionwhere2.html
+++ b/Questionwhere2.html
@@ -146,13 +146,13 @@
     const japaneseModelContent = {
         "1/10": "昨夜どこにいたの？",
         "2/10": "君はどこで生まれたの？",
-        "3/10": "イベントはどこで開催されたの？",
+        "3/10": "そのイベントはどこで開催されたの？",
         "4/10": "昨日どこに行ったの？",
         "5/10": "その本をどこで見つけたの？",
         "6/10": "どこで夕飯を食べたの？",
         "7/10": "明日どこに行くの？",
         "8/10": "彼にどこで会うの？",
-        "9/10": "僕が電話した時、どこに行ってたの？",
+        "9/10": "僕が電話した時、どこにいたの？",
         "10/10": "どこに行ってたの？"
     };
 
