--- a/Questionwhere2k.html
+++ b/Questionwhere2k.html
@@ -163,7 +163,7 @@
         "4/10": "Where do you live?",
         "5/10": "Where do you usually hang out?",
         "6/10": "Where does she work?",
-        "7/10": "Where do you get your groceries?",
+        "7/10": "Where do you buy groceries?",
         "8/10": "Where are you going?",
         "9/10": "Where is she working now?",
         "10/10": "Where is he staying tonight?"
