--- a/Questionwhen1k.html
+++ b/Questionwhen1k.html
@@ -153,7 +153,7 @@
         "7/10": "その映画はいつ見たの？",
         "8/10": "彼からいつ連絡が来たの？",
         "9/10": "いつ到着したの？",
-        "10/10": "レポートをいつ終えたの？"
+        "10/10": "レポートはいつ終えたの？"
     };
 
     const englishModelContent = {
