remove previous button

--- a/can.html
+++ b/can.html
@@ -81,12 +81,8 @@
         <div id="japanese_content" onclick="goEnglishContent()"
             style="display: block;transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0); z-index: 0;">
             <div class="content-item">
-                <div style="display: flex; justify-content: space-between;">
+                <div>
                     <p id="content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">1/10</p>
-                    <p id="ja_previous_btn"
-                        style="color: black; font-size: 20px; font-weight: 700; margin: 0px; display: none;"
-                        onclick="goPrevious()">
-                        前の</p>
                 </div>
                 <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
                     <p id="main_content"
@@ -98,13 +94,9 @@
         <div id="english_content"
             style="display: none; position: relative; transition: opacity 1s ease-in-out, transform 1s ease-in-out;transform: translateX(0);">
             <div class="content-item" onclick="goJapaneseContent()">
-                <div style="display: flex; justify-content: space-between;">
+                <div>
                     <p id="english_content_order" style="color: black; font-size: 20px; font-weight: 700; margin: 0px;">
                         1/10</p>
-                    <p id="en_previous_btn"
-                        style="color: black; font-size: 20px; font-weight: 700; margin: 0px; display: none;"
-                        onclick="goPrevious()">
-                        Previous</p>
                 </div>
                 <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;">
                     <p id="english_main_content"
